@@ -2,6 +2,8 @@ msva-perl (0.5~pre) unstable; urgency=low
 
   * If ${MSVA_KEYSERVER} is unset or blank, default to using keyserver
     from ${GNUPGHOME}/gpg.conf if that file exists. (addresses MS #2080)
+  * Under Linux, report details about the requesting process if we can
+    learn them from /proc (closes MS #2005)
 
  -- Daniel Kahn Gillmor <dkg@fifthhorseman.net>  Mon, 11 Oct 2010 16:02:22 -0400
 
